refactor: toList 간소화